--- a/Jobsheet01_PBO.ipynb
+++ b/Jobsheet01_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN33+XYjOJn+/UxVfEyceqE",
+      "authorship_tag": "ABX9TyORd6euYfN8q78An/wpSRdn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,422 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Praktikum 1"
+      ],
       "metadata": {
-        "id": "-0I_EY62I_ac"
+        "id": "nfFS5zNQZyMK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "angka_int = 10\n",
+        "print (\"angka_int =\", angka_int, \"->\", type(angka_int))\n",
+        "\n",
+        "angka_float = 3.14\n",
+        "print (\"angka_float =\", angka_float, \"->\", type(angka_float))\n",
+        "\n",
+        "angka_complex = 2 + 3j\n",
+        "print(\"angka_complex =\", angka_complex, \"->\", type(angka_complex))\n",
+        "is_active = True\n",
+        "print(\"noted: \")\n",
+        "\n",
+        "print(\"Integer adalah tipe data untuk bilangan Bulat\")\n",
+        "\n",
+        "print(\"float adalah tipe data untuk bilangan Desimal/koma\")\n",
+        "\n",
+        "print(\"complex adalah tipe data untuk bilangan yang terdiri dari bilangan bulat dan bilangan imajiner\")"
+      ],
+      "metadata": {
+        "id": "uIQiXSZuM9Zt",
+        "outputId": "34751997-c2f1-45ad-8719-4e0a43b1f941",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "angka_int = 10 -> <class 'int'>\n",
+            "angka_float = 3.14 -> <class 'float'>\n",
+            "angka_complex = (2+3j) -> <class 'complex'>\n",
+            "noted:\n",
+            "Integer adalah tipe data untuk bilangan Bulat\n",
+            "float adalah tipe data untuk bilangan Desimal/koma\n",
+            "complex adalah tipe data untuk bilangan yang terdiri dari bilangan bulat dan bilangan imajiner\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "is_active = True\n",
+        "\n",
+        "print(\"is_active =\", is_active, \"->\", type(is_active))\n",
+        "\n",
+        "print(\"noted\")\n",
+        "\n",
+        "print(\"Tipe data boolean adalah tipe data yang bernilai True atau False\")"
+      ],
+      "metadata": {
+        "id": "0EtByN0PXhVC",
+        "outputId": "7b460973-a135-4022-ab3d-e14126f7ce93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "is_active = True -> <class 'bool'>\n",
+            "noted\n",
+            "Tipe data boolean adalah tipe data yang bernilai True atau False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "teks = \"Hello, Python!\"\n",
+        "\n",
+        "print(\"teks =\", teks, \"->\", type(teks))\n",
+        "\n",
+        "print(\"noted: Tipe data String adalah tipe data yang menyimpan nilai huruf/Alfhabet\")"
+      ],
+      "metadata": {
+        "id": "DjM8UtirX8nl",
+        "outputId": "3d1ebdd7-2abd-456e-8c58-16d28fa0d1f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "teks = Hello, Python! -> <class 'str'>\n",
+            "noted: Tipe data String adalah tipe data yang menyimpan nilai huruf/Alfhabet\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. List\n",
+        "daftar_angka = [1, 2, 3, 4, 5]\n",
+        "print(daftar_angka, \"->\", type(daftar_angka))\n",
+        "\n",
+        "# 5. Tuple\n",
+        "koordinat = (10, 20)\n",
+        "print(koordinat, \"->\", type(koordinat))\n",
+        "\n",
+        "# 6. Dictionary\n",
+        "data_mahasiswa = {\n",
+        "    'nama': 'Andi',\n",
+        "    'nim': 'A11.2022.12345',\n",
+        "    'jurusan': 'Teknik Informatika'\n",
+        "}\n",
+        "print(data_mahasiswa, \"->\", type(data_mahasiswa))\n",
+        "\n",
+        "# 7. Set\n",
+        "himpunan_angka = {1, 2, 3}\n",
+        "print(himpunan_angka, \"->\", type(himpunan_angka))\n",
+        "\n",
+        "# 8. Contoh penggunaan konversi tipe data\n",
+        "nilai_str = str(100)\n",
+        "print(nilai_str, \"->\", type(nilai_str))\n",
+        "\n",
+        "nilai_int = int(100)\n",
+        "print(nilai_int, \"->\", type(nilai_int))\n"
+      ],
+      "metadata": {
+        "id": "TgfJE-8xWNKy",
+        "outputId": "ff1cb3f3-7698-4183-eea4-4a336104f564",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5] -> <class 'list'>\n",
+            "(10, 20) -> <class 'tuple'>\n",
+            "{'nama': 'Andi', 'nim': 'A11.2022.12345', 'jurusan': 'Teknik Informatika'} -> <class 'dict'>\n",
+            "{1, 2, 3} -> <class 'set'>\n",
+            "100 -> <class 'str'>\n",
+            "100 -> <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Praktikum 2"
+      ],
+      "metadata": {
+        "id": "GkmpTerTZtwD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# -*- coding: utf-8 -*-\n",
+        "\n",
+        "# 1. Pendeklarasian Variabel\n",
+        "nama = \"Budi\"\n",
+        "umur = 20\n",
+        "tinggi = 170.5\n",
+        "is_student = True\n",
+        "\n",
+        "print(\"Nama =\", nama)\n",
+        "print(\"Umur =\", umur)\n",
+        "print(\"Tinggi =\", tinggi, \"cm\")\n",
+        "print(\"Mahasiswa =\", is_student)\n",
+        "\n",
+        "# Python tidak memerlukan deklarasi tipe data secara eksplisit.\n",
+        "# Tipe data variabel akan menyesuaikan dengan nilai yang diberikan.\n",
+        "\n",
+        "# 2. Operasi Aritmetika\n",
+        "a = 10\n",
+        "b = 3\n",
+        "\n",
+        "penjumlahan = a + b       # Tambah\n",
+        "pengurangan = a - b       # Kurang\n",
+        "perkalian = a * b         # Kali\n",
+        "pembagian = a / b         # Bagi (hasil float)\n",
+        "pembagian_bulat = a // b  # Bagi (hasil bulat)\n",
+        "modulus = a % b           # Sisa bagi\n",
+        "pangkat = a ** b          # Pemangkatan\n",
+        "\n",
+        "print(\"\\nOPERASI ARITMETIKA\")\n",
+        "print(\"a =\", a, \", b =\", b)\n",
+        "print(\"Penjumlahan =\", penjumlahan)\n",
+        "print(\"Pengurangan =\", pengurangan)\n",
+        "print(\"Perkalian =\", perkalian)\n",
+        "print(\"Pembagian =\", pembagian)\n",
+        "print(\"Pembagian Bulat =\", pembagian_bulat)\n",
+        "print(\"Modulus =\", modulus)\n",
+        "print(\"Pangkat =\", pangkat)\n",
+        "\n",
+        "# 3. Operasi Perbandingan\n",
+        "# Menghasilkan nilai Boolean (True/False)\n",
+        "lebih_besar = a > b\n",
+        "kurang_dari = a < b\n",
+        "sama_dengan = a == b\n",
+        "tidak_sama = a != b\n",
+        "lebih_besar_sama = a >= b\n",
+        "kurang_sama = a <= b\n",
+        "\n",
+        "print(\"\\nOPERASI PERBANDINGAN\")\n",
+        "print(\"a > b =\", lebih_besar)\n",
+        "print(\"a < b =\", kurang_dari)\n",
+        "print(\"a == b =\", sama_dengan)\n",
+        "print(\"a != b =\", tidak_sama)\n",
+        "print(\"a >= b =\", lebih_besar_sama)\n",
+        "print(\"a <= b =\", kurang_sama)\n",
+        "\n",
+        "# 4. Operasi Logika\n",
+        "# Menggunakan operator and, or, dan not\n",
+        "x = True\n",
+        "y = False\n",
+        "\n",
+        "logika_and = x and y\n",
+        "logika_or = x or y\n",
+        "logika_not_x = not x\n",
+        "\n",
+        "print(\"\\nOPERASI LOGIKA\")\n",
+        "print(\"x =\", x, \", y =\", y)\n",
+        "print(\"x and y =\", logika_and)\n",
+        "print(\"x or y =\", logika_or)\n",
+        "print(\"not x =\", logika_not_x)\n",
+        "\n",
+        "# 5. Contoh Penggunaan di dalam Percabangan\n",
+        "if a > b and b > 0:\n",
+        "    print(\"\\nKondisi terpenuhi: a lebih besar dari b, dan b masih positif.\")\n",
+        "else:\n",
+        "    print(\"\\nKondisi tidak terpenuhi atau b <= 0.\")\n"
+      ],
+      "metadata": {
+        "id": "KQ4NDHTQZrOt",
+        "outputId": "7f3e134e-0a67-4092-943d-9eb1d22a8c83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama = Budi\n",
+            "Umur = 20\n",
+            "Tinggi = 170.5 cm\n",
+            "Mahasiswa = True\n",
+            "\n",
+            "OPERASI ARITMETIKA\n",
+            "a = 10 , b = 3\n",
+            "Penjumlahan = 13\n",
+            "Pengurangan = 7\n",
+            "Perkalian = 30\n",
+            "Pembagian = 3.3333333333333335\n",
+            "Pembagian Bulat = 3\n",
+            "Modulus = 1\n",
+            "Pangkat = 1000\n",
+            "\n",
+            "OPERASI PERBANDINGAN\n",
+            "a > b = True\n",
+            "a < b = False\n",
+            "a == b = False\n",
+            "a != b = True\n",
+            "a >= b = True\n",
+            "a <= b = False\n",
+            "\n",
+            "OPERASI LOGIKA\n",
+            "x = True , y = False\n",
+            "x and y = False\n",
+            "x or y = True\n",
+            "not x = False\n",
+            "\n",
+            "Kondisi terpenuhi: a lebih besar dari b, dan b masih positif.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Praktikum 3"
+      ],
+      "metadata": {
+        "id": "IysVUZl4dxjD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# -*- coding: utf-8 -*-\n",
+        "\n",
+        "# 1. IF Sederhana\n",
+        "# Program hanya mengeksekusi blok jika kondisinya True\n",
+        "\n",
+        "nilai = 85\n",
+        "print(\"Contoh IF Sederhana:\")\n",
+        "if nilai > 80:\n",
+        "    print(\"Selamat! Anda lulus dengan nilai tinggi.\\n\")\n",
+        "\n",
+        "# 2. IF-ELSE\n",
+        "# Jika kondisi True, eksekusi blok if; jika False, eksekusi blok else\n",
+        "\n",
+        "umur = 17\n",
+        "print(\"Contoh IF-ELSE:\")\n",
+        "if umur >= 18:\n",
+        "    print(\"Anda sudah cukup umur untuk mendapatkan SIM.\")\n",
+        "else:\n",
+        "    print(\"Anda belum cukup umur untuk mendapatkan SIM.\\n\")\n",
+        "\n",
+        "# 3. IF-ELIF-ELSE\n",
+        "# Menangani banyak kondisi secara berurutan.\n",
+        "# Jika ada kondisi yang terpenuhi, blok yang bersangkutan dieksekusi,\n",
+        "# lalu program melewati blok kondisi setelahnya.\n",
+        "\n",
+        "hari = \"Rabu\"\n",
+        "print(\"Contoh IF-ELIF-ELSE:\")\n",
+        "if hari == \"Senin\":\n",
+        "    print(\"Hari Senin - Saatnya kembali bekerja!\")\n",
+        "elif hari == \"Selasa\":\n",
+        "    print(\"Hari Selasa - Jadwal rapat mingguan.\")\n",
+        "elif hari == \"Rabu\":\n",
+        "    print(\"Hari Rabu - Ada diskon di beberapa toko.\")\n",
+        "else:\n",
+        "    print(\"Hari lainnya - Atur jadwalmu dengan baik.\\n\")\n",
+        "\n",
+        "# 4. IF Bersarang (Nested IF)\n",
+        "# Kondisi di dalam kondisi, biasa digunakan jika kita perlu\n",
+        "# memeriksa sub-kondisi setelah kondisi pertama terpenuhi.\n",
+        "\n",
+        "suhu = 35\n",
+        "print(\"Contoh IF Bersarang (Nested IF):\")\n",
+        "if suhu > 30:\n",
+        "    print(\"Cuaca cukup panas.\")\n",
+        "    if suhu > 40:\n",
+        "        print(\"Bahkan sangat terik! Disarankan banyak minum air.\")\n",
+        "    else:\n",
+        "        print(\"Masih relatif normal, tapi tetap jaga kesehatan.\")\n",
+        "else:\n",
+        "    print(\"Cuaca sepertinya cukup sejuk.\\n\")\n",
+        "\n",
+        "# 5. Menggabungkan Percabangan dengan Operasi Logika\n",
+        "# Memeriksa beberapa kondisi sekaligus dengan and, or, not\n",
+        "\n",
+        "nilai_teori = 75\n",
+        "nilai_praktik = 80\n",
+        "print(\"Contoh IF dengan Operasi Logika AND/OR:\")\n",
+        "if nilai_teori >= 70 and nilai_praktik >= 70:\n",
+        "    print(\"Anda lulus karena nilai teori dan praktik memadai.\")\n",
+        "elif nilai_teori < 70 and nilai_praktik < 70:\n",
+        "    print(\"Anda perlu meningkatkan nilai teori dan praktik.\")\n",
+        "elif nilai_teori < 70:\n",
+        "    print(\"Anda perlu meningkatkan nilai teori.\")\n",
+        "else:\n",
+        "    print(\"Anda perlu meningkatkan nilai praktik.\\n\")\n",
+        "\n",
+        "# 6. Penggunaan If Ternary (atau Conditional Expression)\n",
+        "# Bentuk ringkas: <hasil_if_true> if <kondisi> else <hasil_if_false>\n",
+        "\n",
+        "angka = -5\n",
+        "print(\"Contoh If Ternary (Conditional Expression):\")\n",
+        "status = \"Positif\" if angka > 0 else \"Negatif atau Nol\"\n",
+        "print(\"Angka =\", angka, \"=>\", status)\n"
+      ],
+      "metadata": {
+        "id": "SwEKv7yWZwJB",
+        "outputId": "d7a47917-dea9-4e84-d15d-c95203579952",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Contoh IF Sederhana:\n",
+            "Selamat! Anda lulus dengan nilai tinggi.\n",
+            "\n",
+            "Contoh IF-ELSE:\n",
+            "Anda belum cukup umur untuk mendapatkan SIM.\n",
+            "\n",
+            "Contoh IF-ELIF-ELSE:\n",
+            "Hari Rabu - Ada diskon di beberapa toko.\n",
+            "Contoh IF Bersarang (Nested IF):\n",
+            "Cuaca cukup panas.\n",
+            "Masih relatif normal, tapi tetap jaga kesehatan.\n",
+            "Contoh IF dengan Operasi Logika AND/OR:\n",
+            "Anda lulus karena nilai teori dan praktik memadai.\n",
+            "Contoh If Ternary (Conditional Expression):\n",
+            "Angka = -5 => Negatif atau Nol\n"
+          ]
+        }
+      ]
     }
   ]
 }
