--- a/Jobsheet01_PBO.ipynb
+++ b/Jobsheet01_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORd6euYfN8q78An/wpSRdn",
+      "authorship_tag": "ABX9TyP2XfGK+5kU83sSNE6gtn6F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +419,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,6 +443,167 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. FOR Loop dengan range()\n",
+        "print(\"1) FOR loop dengan range()\")\n",
+        "for i in range(5):\n",
+        "  print(\"Perulangan ke-\", i)\n",
+        "# range(5) menghasilkan nilai 0, 1, 2, 3, dan 4\n",
+        "# Sehingga perulangan akan berjalan sebanyak 5 kali 09:\n",
+        "print()  # pemisah output\n",
+        "\n",
+        "# 2. FOR Loop untuk mengiterasi List\n",
+        "print(\"2) FOR loop mengiterasi list\")\n",
+        "buah = [\"apel\", \"mangga\", \"jeruk\", \"pisang\"]\n",
+        "for item in buah:\n",
+        "  print(\"Buah:\", item)\n",
+        "# Loop akan mengeksekusi setiap elemen dalam list \"buah\" 18:\n",
+        "print()\n",
+        "\n",
+        "# 3. WHILE Loop\n",
+        "print(\"3) WHILE loop sederhana\")\n",
+        "count = 0\n",
+        "while count < 5:\n",
+        "  print(\"count =\", count)\n",
+        "  count += 1  # increment\n",
+        " # Perulangan while terus dijalankan selama kondisi (count < 5) bernilai True\n",
+        "print()\n",
+        "\n",
+        "# 4. BREAK pada Loop\n",
+        "print(\"4) BREAK di dalam loop\")\n",
+        "for i in range(10):\n",
+        "  if i == 3:\n",
+        "    print(\"Loop dihentikan pada i =\", i)\n",
+        "    break  # mengakhiri loop saat i = 3\n",
+        "  print(\"i =\", i)\n",
+        "print()\n",
+        "# Keyword break langsung menghentikan keseluruhan perulangan\n",
+        "\n",
+        "# 5. CONTINUE pada Loop\n",
+        "print(\"5) CONTINUE di dalam loop\")\n",
+        "for i in range(5):\n",
+        "  if i == 2:\n",
+        "    print(\"Lewati i =\", i, \"dengan continue\")\n",
+        "    continue  # melewati iterasi saat ini dan lanjut ke iterasi berikutnya\n",
+        "  print(\"i =\", i)\n",
+        "# Saat i = 2, baris print(\"i =\", i) tidak akan dieksekusi\n",
+        "print()\n",
+        "\n",
+        "# 6. NESTED Loop (Loop Bersarang)\n",
+        "print(\"6) NESTED loop\")\n",
+        "for i in range(3):            # Loop luar (outer loop)\n",
+        "  for j in range(2):        # Loop dalam (inner loop)\n",
+        "    print(f\"i={i}, j={j}\")\n",
+        "# Pada setiap iterasi i, loop j akan berjalan dari 0 sampai 1\n",
+        "print()\n",
+        "\n",
+        "#7. Memanfaatkan ELSE pada Loop\n",
+        "print(\"7) ELSE pada loop for/while\")\n",
+        "# Python memiliki fitur unik: blok else pada loop\n",
+        "# Blok else akan dieksekusi jika loop selesai tanpa di-break.\n",
+        "\n",
+        "for x in range(3):\n",
+        "  print(\"x =\", x)\n",
+        "else:\n",
+        "  print(\"Loop for telah selesai tanpa break.\\n\")\n",
+        "y = 0\n",
+        "while y < 3:\n",
+        "  print(\"y =\", y)\n",
+        "  y += 1\n",
+        "else:\n",
+        "  print(\"Loop while telah selesai tanpa break.\\n\")\n",
+        "\n",
+        "# 8. PASS sebagai placeholder\n",
+        "print(\"8) PASS (placeholder)\")\n",
+        "for i in range(3):\n",
+        "  if i == 1:\n",
+        "    pass  # pass tidak melakukan apa-apa, digunakan sebagai placeholder\n",
+        "  print(\"i =\", i)"
+      ],
+      "metadata": {
+        "id": "oAdFUSB30l1E",
+        "outputId": "526a20ba-9672-4961-f2e4-f00b6cfad18f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1) FOR loop dengan range()\n",
+            "Perulangan ke- 0\n",
+            "Perulangan ke- 1\n",
+            "Perulangan ke- 2\n",
+            "Perulangan ke- 3\n",
+            "Perulangan ke- 4\n",
+            "\n",
+            "2) FOR loop mengiterasi list\n",
+            "Buah: apel\n",
+            "Buah: mangga\n",
+            "Buah: jeruk\n",
+            "Buah: pisang\n",
+            "\n",
+            "3) WHILE loop sederhana\n",
+            "count = 0\n",
+            "count = 1\n",
+            "count = 2\n",
+            "count = 3\n",
+            "count = 4\n",
+            "\n",
+            "4) BREAK di dalam loop\n",
+            "i = 0\n",
+            "i = 1\n",
+            "i = 2\n",
+            "Loop dihentikan pada i = 3\n",
+            "\n",
+            "5) CONTINUE di dalam loop\n",
+            "i = 0\n",
+            "i = 1\n",
+            "Lewati i = 2 dengan continue\n",
+            "i = 3\n",
+            "i = 4\n",
+            "\n",
+            "6) NESTED loop\n",
+            "i=0, j=0\n",
+            "i=0, j=1\n",
+            "i=1, j=0\n",
+            "i=1, j=1\n",
+            "i=2, j=0\n",
+            "i=2, j=1\n",
+            "\n",
+            "7) ELSE pada loop for/while\n",
+            "x = 0\n",
+            "x = 1\n",
+            "x = 2\n",
+            "Loop for telah selesai tanpa break.\n",
+            "\n",
+            "y = 0\n",
+            "y = 1\n",
+            "y = 2\n",
+            "Loop while telah selesai tanpa break.\n",
+            "\n",
+            "8) PASS (placeholder)\n",
+            "i = 0\n",
+            "i = 1\n",
+            "i = 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JrmRsIot0qQo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
