Dibuat menggunakan Colab

--- a/Jobsheet01_PBO.ipynb
+++ b/Jobsheet01_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2XfGK+5kU83sSNE6gtn6F",
+      "authorship_tag": "ABX9TyPbtKOfHRb24jHk5wI2SNon",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,7 +218,32 @@
         "\n",
         "# Python tidak memerlukan deklarasi tipe data secara eksplisit.\n",
         "# Tipe data variabel akan menyesuaikan dengan nilai yang diberikan.\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KQ4NDHTQZrOt",
+        "outputId": "45ed51cf-7898-485f-953e-7fd416ae6cce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama = Budi\n",
+            "Umur = 20\n",
+            "Tinggi = 170.5 cm\n",
+            "Mahasiswa = True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 2. Operasi Aritmetika\n",
         "a = 10\n",
         "b = 3\n",
@@ -239,8 +264,38 @@
         "print(\"Pembagian =\", pembagian)\n",
         "print(\"Pembagian Bulat =\", pembagian_bulat)\n",
         "print(\"Modulus =\", modulus)\n",
-        "print(\"Pangkat =\", pangkat)\n",
-        "\n",
+        "print(\"Pangkat =\", pangkat)"
+      ],
+      "metadata": {
+        "id": "xwV6iit24Trd",
+        "outputId": "12472527-af64-4413-8a7b-6e777064dca4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "OPERASI ARITMETIKA\n",
+            "a = 10 , b = 3\n",
+            "Penjumlahan = 13\n",
+            "Pengurangan = 7\n",
+            "Perkalian = 30\n",
+            "Pembagian = 3.3333333333333335\n",
+            "Pembagian Bulat = 3\n",
+            "Modulus = 1\n",
+            "Pangkat = 1000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 3. Operasi Perbandingan\n",
         "# Menghasilkan nilai Boolean (True/False)\n",
         "lebih_besar = a > b\n",
@@ -256,8 +311,36 @@
         "print(\"a == b =\", sama_dengan)\n",
         "print(\"a != b =\", tidak_sama)\n",
         "print(\"a >= b =\", lebih_besar_sama)\n",
-        "print(\"a <= b =\", kurang_sama)\n",
-        "\n",
+        "print(\"a <= b =\", kurang_sama)"
+      ],
+      "metadata": {
+        "id": "AMDrisTK4aJ3",
+        "outputId": "b3daff80-f0b3-4d26-e823-6f44d010b361",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "OPERASI PERBANDINGAN\n",
+            "a > b = True\n",
+            "a < b = False\n",
+            "a == b = False\n",
+            "a != b = True\n",
+            "a >= b = True\n",
+            "a <= b = False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 4. Operasi Logika\n",
         "# Menggunakan operator and, or, dan not\n",
         "x = True\n",
@@ -271,8 +354,34 @@
         "print(\"x =\", x, \", y =\", y)\n",
         "print(\"x and y =\", logika_and)\n",
         "print(\"x or y =\", logika_or)\n",
-        "print(\"not x =\", logika_not_x)\n",
-        "\n",
+        "print(\"not x =\", logika_not_x)"
+      ],
+      "metadata": {
+        "id": "LTnnB2zD4duB",
+        "outputId": "17c8ab0b-dc59-4bed-ae98-bb3f8cc93abd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "OPERASI LOGIKA\n",
+            "x = True , y = False\n",
+            "x and y = False\n",
+            "x or y = True\n",
+            "not x = False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 5. Contoh Penggunaan di dalam Percabangan\n",
         "if a > b and b > 0:\n",
         "    print(\"\\nKondisi terpenuhi: a lebih besar dari b, dan b masih positif.\")\n",
@@ -280,46 +389,18 @@
         "    print(\"\\nKondisi tidak terpenuhi atau b <= 0.\")\n"
       ],
       "metadata": {
-        "id": "KQ4NDHTQZrOt",
-        "outputId": "7f3e134e-0a67-4092-943d-9eb1d22a8c83",
+        "id": "LdeU4pFa4gQu",
+        "outputId": "7ed8d14e-8f54-480e-9515-f4ddfbfcc662",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nama = Budi\n",
-            "Umur = 20\n",
-            "Tinggi = 170.5 cm\n",
-            "Mahasiswa = True\n",
-            "\n",
-            "OPERASI ARITMETIKA\n",
-            "a = 10 , b = 3\n",
-            "Penjumlahan = 13\n",
-            "Pengurangan = 7\n",
-            "Perkalian = 30\n",
-            "Pembagian = 3.3333333333333335\n",
-            "Pembagian Bulat = 3\n",
-            "Modulus = 1\n",
-            "Pangkat = 1000\n",
-            "\n",
-            "OPERASI PERBANDINGAN\n",
-            "a > b = True\n",
-            "a < b = False\n",
-            "a == b = False\n",
-            "a != b = True\n",
-            "a >= b = True\n",
-            "a <= b = False\n",
-            "\n",
-            "OPERASI LOGIKA\n",
-            "x = True , y = False\n",
-            "x and y = False\n",
-            "x or y = True\n",
-            "not x = False\n",
             "\n",
             "Kondisi terpenuhi: a lebih besar dari b, dan b masih positif.\n"
           ]
@@ -530,7 +611,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
