Dibuat menggunakan Colab

--- a/Jobsheet2.ipynb
+++ b/Jobsheet2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYcmXnueyLIE+lpWaa6A+a",
+      "authorship_tag": "ABX9TyNdZWSWx6AW7edU2GDT9jMH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PxvqMFnWHXEB",
-        "outputId": "aba1e9b1-485f-42c0-8fdd-398ac47f9be4"
+        "outputId": "3a79e2e4-f2ec-4319-97d3-ba0bd83b3835"
       },
       "outputs": [
         {
@@ -123,7 +123,7 @@
         "id": "hwdltQfaNQQs",
         "outputId": "b71ba21c-150a-4093-d61c-e6595ddd6404"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
         "id": "VaPMLA0vPpkm",
         "outputId": "7de537b0-60b6-4c38-a730-83aaf070d748"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "id": "W1IDPCYNXHpV",
         "outputId": "a92bd844-4e1e-4c29-f9fa-a2c376335bf4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,10 +323,71 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Tugas 2"
+      ],
+      "metadata": {
+        "id": "ELDRJtfZf9ty"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import importlib\n",
+        "import penjualan\n",
+        "importlib.reload(penjualan)\n",
+        "\n",
+        "from penjualan import Penjualan_Hp\n",
+        "\n",
+        "# Membuat objek dari kelas Penjualan_Hp\n",
+        "Hp1 = Penjualan_Hp(\"Xiaomi 15\", \"Snapdragon 8 Elite\", \"29 October 2024\")\n",
+        "Hp2 = Penjualan_Hp(\"Vivo x200\", \"Dimensity 9400\", \"19 October 2024\")\n",
+        "\n",
+        "# Menggunakan metode\n",
+        "Hp1.tampilkan_spesifikasi()\n",
+        "Hp2.tampilkan_spesifikasi()\n",
+        "\n",
+        "# Mengubah status dan menampilkan informasi\n",
+        "Hp2.Pesan()\n",
+        "Hp2.Batal()\n",
+        "Hp1.Pesan()\n",
+        "Hp1.Deal()\n"
+      ],
+      "metadata": {
+        "id": "0Bv8aWKtZF8W",
+        "outputId": "62e347e6-8ac5-4ed1-954d-2958efb3ec14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merk: Xiaomi 15\n",
+            "Spesifikasi: Snapdragon 8 Elite\n",
+            "Tanggal Rilis: 29 October 2024\n",
+            "Status: Ready\n",
+            "Merk: Vivo x200\n",
+            "Spesifikasi: Dimensity 9400\n",
+            "Tanggal Rilis: 19 October 2024\n",
+            "Status: Ready\n",
+            "HP 'Vivo x200' sedang diproses untuk pemesanan.\n",
+            "Pemesanan untuk HP 'Vivo x200' dibatalkan.\n",
+            "HP 'Xiaomi 15' sedang diproses untuk pemesanan.\n",
+            "HP 'Xiaomi 15' berhasil terbeli.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0Bv8aWKtZF8W"
+        "id": "zFfjqUvQgHwt"
       },
       "execution_count": null,
       "outputs": []
