Dibuat menggunakan Colab

--- a/Jobsheet_PBO3.ipynb
+++ b/Jobsheet_PBO3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaY3I7KPiOGuUM6KgdX4OZ",
+      "authorship_tag": "ABX9TyNlm1RVCfIQ8NwXBzQ5CYmo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +165,7 @@
         "id": "5HW5HjPy6Htb",
         "outputId": "76e128ef-2e13-46ae-ba39-cd6ba9574e82"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
         "id": "PANdmqCv6jYy",
         "outputId": "d75fba84-22a5-45dc-f631-9420b6c5535c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
         "id": "ZnLWvDwD68vv",
         "outputId": "2a603951-6b66-49e0-bcfd-09b997da74a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,8 +404,7 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -414,7 +413,7 @@
         "id": "ghIq9XyC7E_5",
         "outputId": "ed09ca40-9ada-4eb3-a070-b7c797849985"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +513,7 @@
         "id": "6jNocv5N7MEi",
         "outputId": "02f7cf57-5b84-4781-8281-6b073a618c06"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,9 +537,101 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "\n",
+        "# Program Kelas Student\n",
+        "class Student:\n",
+        "    def __init__(self, name, score):\n",
+        "        self.__name = name\n",
+        "        self.__score = 0\n",
+        "        self.__grade = \"E\"\n",
+        "        self.score = score\n",
+        "\n",
+        "    @property\n",
+        "    def name(self):\n",
+        "        return self.__name\n",
+        "\n",
+        "    @name.setter\n",
+        "    def name(self, new_name):\n",
+        "        if new_name != \"\":\n",
+        "            self.__name = new_name\n",
+        "        else:\n",
+        "            print(\"Nama tidak boleh kosong!\")\n",
+        "\n",
+        "    @property\n",
+        "    def score(self):\n",
+        "        return self.__score\n",
+        "\n",
+        "    @score.setter\n",
+        "    def score(self, new_score):\n",
+        "        if 0 <= new_score <= 100:\n",
+        "            self.__score = new_score\n",
+        "            self.__update_grade()\n",
+        "        else:\n",
+        "            print(\"Nilai harus antara 0 sampai 100.\")\n",
+        "\n",
+        "    def __update_grade(self):\n",
+        "        if self.__score >= 90:\n",
+        "            self.__grade = \"A\"\n",
+        "        elif self.__score >= 80:\n",
+        "            self.__grade = \"B\"\n",
+        "        elif self.__score >= 70:\n",
+        "            self.__grade = \"C\"\n",
+        "        elif self.__score >= 60:\n",
+        "            self.__grade = \"D\"\n",
+        "        else:\n",
+        "            self.__grade = \"E\"\n",
+        "\n",
+        "    def show_info(self):\n",
+        "        print(\"Nama Mahasiswa:\", self.__name)\n",
+        "        print(\"Nilai:\", self.__score)\n",
+        "        print(\"Grade:\", self.__grade)\n",
+        "\n",
+        "    def __del__(self):\n",
+        "        print(f\"Data mahasiswa {self.__name} telah dihapus dari sistem.\")\n",
+        "\n",
+        "\n",
+        "# Contoh penggunaan\n",
+        "mhs = Student(\"Sri\", 89)\n",
+        "mhs.show_info()\n",
+        "\n",
+        "print(\"\\nNilai diubah...\")\n",
+        "mhs.score = 95\n",
+        "mhs.show_info()\n",
+        "\n",
+        "del mhs\n"
+      ],
+      "metadata": {
+        "id": "Zinbtq50CyFZ",
+        "outputId": "daaabf8b-9b7f-4008-ecb7-52a74645e4d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama Mahasiswa: Sri\n",
+            "Nilai: 89\n",
+            "Grade: B\n",
+            "\n",
+            "Nilai diubah...\n",
+            "Nama Mahasiswa: Sri\n",
+            "Nilai: 95\n",
+            "Grade: A\n",
+            "Data mahasiswa Sri telah dihapus dari sistem.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Zinbtq50CyFZ"
+        "id": "1H1hC0IkFq4t"
       },
       "execution_count": null,
       "outputs": []
