--- a/PBO_PEWARISAN.ipynb
+++ b/PBO_PEWARISAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3WPtEa3M1MI9klMwSxcm8",
+      "authorship_tag": "ABX9TyMJIc/x79QHMAvBpZ8xuEX1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -278,70 +278,6 @@
     {
       "cell_type": "code",
       "source": [
-        "class organisme:\n",
-        "    def __init__(self, nama):\n",
-        "        self.nama = nama\n",
-        "        print(f\"organisme '{self.nama}' diciptakan.\")\n",
-        "\n",
-        "    def bernapas(self):\n",
-        "        print(f\"{self.nama} sedang bernapas.\")\n",
-        "\n",
-        "class hewan(organisme):\n",
-        "  def __init__(self, nama, jenis_makanan):\n",
-        "    super().__init__(nama)\n",
-        "    self.jenis_makanan = jenis_makanan\n",
-        "    print(f\"hewan '{self.nama}' adalah {self.jenis_makanan}.\")\n",
-        "\n",
-        "  def bergerak(self):\n",
-        "    print(f\"{self.nama} sedang bergerak.\")\n",
-        "\n",
-        "class mamalia(hewan):\n",
-        "  def __init__(self, nama, jenis_makanan, jumlah_kaki):\n",
-        "    super().__init__(nama, jenis_makanan)\n",
-        "    self.jumlah_kaki = jumlah_kaki\n",
-        "    print(f\"mamalia '{self.nama}' memiliki {self.jumlah_kaki} kaki.\")\n",
-        "\n",
-        "  def menyusui(self):\n",
-        "    print(f\"{self.nama} sedang menyusui.\")\n",
-        "\n",
-        "if __name__==\"__main__\":\n",
-        "  kucing = mamalia(\"puspus\", \"karnivora\", 4)\n",
-        "  print(\"-\"*20)\n",
-        "  kucing.bernapas()\n",
-        "  kucing.bergerak()\n",
-        "  print(f\"jenis makanan: {kucing.jenis_makanan}\")\n",
-        "  print(f\"nama organisme: {kucing.nama}\")\n",
-        "  kucing.menyusui()"
-      ],
-      "metadata": {
-        "id": "umnwRfl14kuZ",
-        "outputId": "9934dc66-f9da-4daa-e4e1-3ba1a515de0d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "organisme 'puspus' diciptakan.\n",
-            "hewan 'puspus' adalah karnivora.\n",
-            "mamalia 'puspus' memiliki 4 kaki.\n",
-            "--------------------\n",
-            "puspus sedang bernapas.\n",
-            "puspus sedang bergerak.\n",
-            "jenis makanan: karnivora\n",
-            "nama organisme: puspus\n",
-            "puspus sedang menyusui.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!apt-get install -y locales\n",
         "!locale-gen id_ID.UTF-8\n",
         "!update-locale LANG=id_ID.UTF-8\n",
@@ -367,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,7 +529,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,9 +560,149 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Kelas Induk\n",
+        "class Mahasiswa:\n",
+        "    def __init__(self, nama, nim, ipk):\n",
+        "        self.nama = nama\n",
+        "        self.nim = nim\n",
+        "        self.ipk = ipk\n",
+        "\n",
+        "    def tampilkan_info(self):\n",
+        "        print(f\"Nama: {self.nama}\")\n",
+        "        print(f\"NIM: {self.nim}\")\n",
+        "        print(f\"IPK: {self.ipk}\")\n",
+        "\n",
+        "    def hitung_predikat(self):\n",
+        "        if self.ipk >= 3.5:\n",
+        "            print(\"Predikat: Dengan Pujian\")\n",
+        "        elif self.ipk >= 3.0:\n",
+        "            print(\"Predikat: Sangat Memuaskan\")\n",
+        "        elif self.ipk >= 2.5:\n",
+        "            print(\"Predikat: Memuaskan\")\n",
+        "        else:\n",
+        "            print(\"Predikat: Cukup\")\n",
+        "\n",
+        "\n",
+        "# Kelas Anak 1 - Mahasiswa Sarjana\n",
+        "class MahasiswaSarjana(Mahasiswa):\n",
+        "    def __init__(self, nama, nim, ipk, semester, sks_lulus):\n",
+        "        super().__init__(nama, nim, ipk)\n",
+        "        self.semester = semester\n",
+        "        self.sks_lulus = sks_lulus\n",
+        "\n",
+        "    def tampilkan_info(self):\n",
+        "        super().tampilkan_info()\n",
+        "        print(f\"Semester: {self.semester}\")\n",
+        "        print(f\"SKS Lulus: {self.sks_lulus}\")\n",
+        "\n",
+        "\n",
+        "# Kelas Anak 2 - Mahasiswa Magister\n",
+        "class MahasiswaMagister(Mahasiswa):\n",
+        "    def __init__(self, nama, nim, ipk, judul_tesis, nama_pembimbing):\n",
+        "        super().__init__(nama, nim, ipk)\n",
+        "        self.judul_tesis = judul_tesis\n",
+        "        self.nama_pembimbing = nama_pembimbing\n",
+        "\n",
+        "    def tampilkan_info(self):\n",
+        "        super().tampilkan_info()\n",
+        "        print(f\"Judul Tesis: {self.judul_tesis}\")\n",
+        "        print(f\"Pembimbing: {self.nama_pembimbing}\")\n",
+        "\n",
+        "    # Override predikat\n",
+        "    def hitung_predikat(self):\n",
+        "        if self.ipk >= 3.7:\n",
+        "            print(\"Predikat: Lulus dengan Pujian (Magister)\")\n",
+        "        elif self.ipk >= 3.3:\n",
+        "            print(\"Predikat: Sangat Memuaskan\")\n",
+        "        else:\n",
+        "            print(\"Predikat: Memuaskan\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  print(\"=== Mahasiswa Biasa ===\")\n",
+        "mhs_biasa = Mahasiswa(\"Faris Buana\", \"20230001\", 2.8)\n",
+        "mhs_biasa.tampilkan_info()\n",
+        "mhs_biasa.hitung_predikat()\n",
+        "\n",
+        "print(\"\\n=== Mahasiswa Sarjana ===\")\n",
+        "mhs_s1 = MahasiswaSarjana(\"Raja Yamete\", \"20220045\", 3.4, semester=6, sks_lulus=110)\n",
+        "mhs_s1.tampilkan_info()\n",
+        "mhs_s1.hitung_predikat()\n",
+        "\n",
+        "print(\"\\n=== Mahasiswa Sarjana 2 ===\")\n",
+        "mhs_s1b = MahasiswaSarjana(\"Sri Mulyani\", \"20221023\", 2.3, semester=4, sks_lulus=60)\n",
+        "mhs_s1b.tampilkan_info()\n",
+        "mhs_s1b.hitung_predikat()\n",
+        "\n",
+        "print(\"\\n=== Mahasiswa Magister ===\")\n",
+        "mhs_s2 = MahasiswaMagister(\"Fazgian Talnia\", \"20210078\", 3.8, \"Analisis Big Data untuk Prediksi Cuaca\", \"Dr. Budi Santosa\")\n",
+        "mhs_s2.tampilkan_info()\n",
+        "mhs_s2.hitung_predikat()\n",
+        "\n",
+        "print(\"\\n=== Mahasiswa Magister 2 ===\")\n",
+        "mhs_s2b = MahasiswaMagister(\"Fajar Raza\", \"20210999\", 3.4, \"Model Pembelajaran Mesin dalam Deteksi Malware\", \"Prof. Retno\")\n",
+        "mhs_s2b.tampilkan_info()\n",
+        "mhs_s2b.hitung_predikat()"
+      ],
+      "metadata": {
+        "id": "w4gZ60Ees_9e",
+        "outputId": "d8f62786-346f-497d-9d8c-7900c8d7770c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Mahasiswa Biasa ===\n",
+            "Nama: Faris Buana\n",
+            "NIM: 20230001\n",
+            "IPK: 2.8\n",
+            "Predikat: Memuaskan\n",
+            "\n",
+            "=== Mahasiswa Sarjana ===\n",
+            "Nama: Raja Yamete\n",
+            "NIM: 20220045\n",
+            "IPK: 3.4\n",
+            "Semester: 6\n",
+            "SKS Lulus: 110\n",
+            "Predikat: Sangat Memuaskan\n",
+            "\n",
+            "=== Mahasiswa Sarjana 2 ===\n",
+            "Nama: Sri Mulyani\n",
+            "NIM: 20221023\n",
+            "IPK: 2.3\n",
+            "Semester: 4\n",
+            "SKS Lulus: 60\n",
+            "Predikat: Cukup\n",
+            "\n",
+            "=== Mahasiswa Magister ===\n",
+            "Nama: Fazgian Talnia\n",
+            "NIM: 20210078\n",
+            "IPK: 3.8\n",
+            "Judul Tesis: Analisis Big Data untuk Prediksi Cuaca\n",
+            "Pembimbing: Dr. Budi Santosa\n",
+            "Predikat: Lulus dengan Pujian (Magister)\n",
+            "\n",
+            "=== Mahasiswa Magister 2 ===\n",
+            "Nama: Fajar Raza\n",
+            "NIM: 20210999\n",
+            "IPK: 3.4\n",
+            "Judul Tesis: Model Pembelajaran Mesin dalam Deteksi Malware\n",
+            "Pembimbing: Prof. Retno\n",
+            "Predikat: Sangat Memuaskan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w4gZ60Ees_9e"
+        "id": "j-upY-67w3es"
       },
       "execution_count": null,
       "outputs": []
